objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>BizBox</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Canada</fullName>
        <description>The Lead process for Canada/GT leads</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Qualifying Deal %28GT%29</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Qualifying Deal %28US%29</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Qualifying Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Tech-Zone</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Test Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADD_TO_QUEUE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add To My Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_ID_Case_Safe__c</fullName>
        <formula>CASESAFEID( ConvertedAccountId  )</formula>
        <label>Account ID (Case Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notContain</operation>
                <value>(Tech-Zone)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notContain</operation>
                <value>Site (OfficeMax)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notContain</operation>
                <value>Site (GT)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notContain</operation>
                <value>Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qualifying Deals</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Services_Buying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Services_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <inlineHelpText>This field is required in order to convert  (Unless lead is directly linked to an account)</inlineHelpText>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_ID__c</fullName>
        <label>Address ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Validation_Error__c</fullName>
        <label>Address Validation Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Bucket__c</fullName>
        <formula>IF(Lead_Age__c &lt; 3, &quot;a) 1-2 days&quot;,
IF(Lead_Age__c &lt; 9, &quot;b) 3-8 days&quot;,
IF(Lead_Age__c &lt; 16, &quot;c) 9-15 days&quot;,
IF(Lead_Age__c &lt; 31, &quot;d) 16-30 days&quot;,
&quot;e) &gt;30 days&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( IsConverted = TRUE, ConvertedDate , TODAY()) - Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_CAD__c</fullName>
        <description>For Storing CAD Currency</description>
        <label>Amount (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>This field is required in order to convert</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_there_servers__c</fullName>
        <label>Are there servers?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>I Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Management_Buying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Management_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignRulesWCWLookup__c</fullName>
        <formula>IF(NOT(ISBLANK(WCW_Count__c)), 
IF(WCW_Count__c&lt; 20, &quot;1to19&quot;, 
IF(WCW_Count__c&gt; 19 &amp;&amp; (Industry_Code__c = &apos;ES&apos; || Industry_Code__c = &apos;GV&apos;), &quot;20to999999&quot;, 
IF(WCW_Count__c&gt; 19 &amp;&amp; WCW_Count__c &lt; 50, &quot;20to49&quot;, 
IF(WCW_Count__c&gt; 49 &amp;&amp; WCW_Count__c &lt; 100, &quot;50to99&quot;, 
IF(WCW_Count__c&gt; 99 &amp;&amp; WCW_Count__c &lt; 150, &quot;100to149&quot;, 
IF(WCW_Count__c&gt; 149 &amp;&amp; WCW_Count__c &lt; 200, &quot;150to199&quot;, 
IF(WCW_Count__c&gt; 199 &amp;&amp; WCW_Count__c &lt; 250, &quot;200to249&quot;, 
IF(WCW_Count__c&gt; 249 &amp;&amp; WCW_Count__c &lt; 500, &quot;250to500&quot;, 
IF(WCW_Count__c&gt; 499, &quot;500to999999&quot;, 
&quot;Br&quot;))))))))),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignRulesWCWLookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Date_Time__c</fullName>
        <description>Used by dashboards as filters (requires Date/Time).</description>
        <formula>DATETIMEVALUE ( Assigned_Date__c ) + (9/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>Populated using process builder when the owner is a User (not a Queue) or when Status does not equal New depending on Lead Source.</description>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Assign__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Turn off if assigning to yourself or a specific lead owner.</inlineHelpText>
        <label>Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by Tech-Zone to track the BDR who worked a lead.  Field is mapped through to the opportunity.</description>
        <label>BDR</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User must be a BDR.</errorMessage>
            <filterItems>
                <field>User.CompuCom_BDR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BDR_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BizBox_AOPS_ID__c</fullName>
        <label>BizBox/AOPS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BizBox_Company_Size__c</fullName>
        <label>BizBox Company Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Pro_Loyalty_Account_Number__c</fullName>
        <description>Case 01265588</description>
        <inlineHelpText>Office Depot loyalty program member number.</inlineHelpText>
        <label>Loyalty Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Lead ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_RSD__c</fullName>
        <description>This is used in the reports</description>
        <formula>Sales_Person_ID__r.User__r.Manager.Manager__c</formula>
        <label>CPD RSD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_RSM__c</fullName>
        <description>This will be used in the reports</description>
        <formula>Sales_Person_ID__r.User__r.Manager__c</formula>
        <label>CPD RSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_Rep__c</fullName>
        <description>This will be used in the Reports</description>
        <formula>Sales_Person_ID__r.User__r.FirstName +&apos; &apos;+ Sales_Person_ID__r.User__r.LastName</formula>
        <label>CPD Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__ProductInterest__c</fullName>
        <label>DupeBlocker - Ignore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Source_URL__c</fullName>
        <label>Campaign Source URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_ad_type__c</fullName>
        <label>Campaign ad type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cellular_Provider__c</fullName>
        <label>Cellular Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chamber_Name__c</fullName>
        <label>Chamber Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chamber_of_Commerce_Member__c</fullName>
        <label>Chamber of Commerce Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Partner Manager</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LeadsChannelManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>This field is required in order to convert  (Unless lead is directly linked to an account)</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account too Small</fullName>
                </value>
                <value>
                    <fullName>Converted To Opportunity</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Duplicate Record</fullName>
                </value>
                <value>
                    <fullName>Financial difficulties</fullName>
                </value>
                <value>
                    <fullName>Inaccurate Data</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Out of business</fullName>
                </value>
                <value>
                    <fullName>Personal Account</fullName>
                </value>
                <value>
                    <fullName>Potential Fraud</fullName>
                </value>
                <value>
                    <fullName>Products not carried by ODP</fullName>
                </value>
                <value>
                    <fullName>Re-Deploy</fullName>
                </value>
                <value>
                    <fullName>Unable to Reach</fullName>
                </value>
                <value>
                    <fullName>Using competing supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consolidated_Lead_Source__c</fullName>
        <formula>if((BLANKVALUE(CreatedBy.Profile.Name, &apos;System&apos;) != &apos;System Administrator API&apos;  &amp;&amp; BLANKVALUE(CreatedBy.Profile.Name, &apos;System&apos;) != &apos;Lead Referral Profile&apos; &amp;&amp; BLANKVALUE(CreatedBy.Profile.Name, &apos;System&apos;) != &apos;System&apos; ),CreatedBy.Profile.Name, text(LeadSource ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consolidated Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID_Case_Safe__c</fullName>
        <formula>CASESAFEID(  ConvertedContactId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID (Case Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do we have permission from the customer/lead to contact them?</description>
        <label>Contact Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Time_Frame__c</fullName>
        <description>Time Frame for a rep to contact a potential customer.</description>
        <label>Contact Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Soon As Possible (24-48hrs)</fullName>
                </value>
                <value>
                    <fullName>Within 1-2 weeks</fullName>
                </value>
                <value>
                    <fullName>Within 2-4 weeks</fullName>
                </value>
                <value>
                    <fullName>Within 1-2 Months</fullName>
                </value>
                <value>
                    <fullName>2+ Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Time__c</fullName>
        <label>Contact Preferred Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Contact)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who is working a lead outside of Office Depot sales network.</description>
        <label>Contractor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <formula>IF(ISPICKVAL(Status, &apos;Converted&apos;),1,0)</formula>
        <label>Converted Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Ordering__c</fullName>
        <formula>IF(ISPICKVAL(Status, &apos;Converted&apos;)&amp;&amp;( Account__r.YTD_Sales_TY__c &gt;0), Account__r.YTD_Sales_TY__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted &amp; Ordering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>This Field is required to convert to a prospect</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>MEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Date_Time__c</fullName>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentProvider__c</fullName>
        <label>Current Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Business_Stage__c</fullName>
        <label>Current Business Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start-Up</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Manage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Supplier__c</fullName>
        <label>Current Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staples</fullName>
                </value>
                <value>
                    <fullName>OfficeMax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>AAA Office Supplies</fullName>
                </value>
                <value>
                    <fullName>Alabama Office Supply</fullName>
                </value>
                <value>
                    <fullName>American Paper and Twine</fullName>
                </value>
                <value>
                    <fullName>Apex Office Supply</fullName>
                </value>
                <value>
                    <fullName>Artlite</fullName>
                </value>
                <value>
                    <fullName>A to Z Office Supply</fullName>
                </value>
                <value>
                    <fullName>Barefield’s Office Supply</fullName>
                </value>
                <value>
                    <fullName>Bertelsons</fullName>
                </value>
                <value>
                    <fullName>Best Office Supply</fullName>
                </value>
                <value>
                    <fullName>Boise Cascade</fullName>
                </value>
                <value>
                    <fullName>Bull Dog</fullName>
                </value>
                <value>
                    <fullName>Capitol Office Supply</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>Caxtons</fullName>
                </value>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Chuckals</fullName>
                </value>
                <value>
                    <fullName>Church and Stagg</fullName>
                </value>
                <value>
                    <fullName>Complete Office Supply</fullName>
                </value>
                <value>
                    <fullName>Convenience Office Supply</fullName>
                </value>
                <value>
                    <fullName>Corporate Express</fullName>
                </value>
                <value>
                    <fullName>Costco</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>Detroit Pencil Company</fullName>
                </value>
                <value>
                    <fullName>El Paso Office Supply</fullName>
                </value>
                <value>
                    <fullName>Emerald Office Supplies</fullName>
                </value>
                <value>
                    <fullName>EON</fullName>
                </value>
                <value>
                    <fullName>Executive Office Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Account_Number__c</fullName>
        <label>Customer Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_ID__c</fullName>
        <label>Cust ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Team_Inactive_Lead__c</fullName>
        <formula>if(CreatedDate &lt; DATETIMEVALUE(&quot;2012-01-01 00:00:00&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Team Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <label>Decision Maker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DevicesAnnuityPlacements__c</fullName>
        <label># Devices/Annuity Placements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Notes__c</fullName>
        <label>Discovery Notes</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duns_Number__c</fullName>
        <label>Duns Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Buying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notification_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Lead mass upload process to not send multiple notification emails to a single rep...when it is true</description>
        <label>Email Notification Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Provider__c</fullName>
        <label>Email Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Office 365</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>Employee ID of Office Depot Associate who sourced this deal. Used for SPIFF reporting.</description>
        <inlineHelpText>Employee ID of Office Depot Associate who sourced this deal.</inlineHelpText>
        <label>Referrer Employee ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <description>Name of Office Depot Associate who sourced this deal. Used for SPIFF reporting.</description>
        <inlineHelpText>Name of Office Depot Associate who sourced this deal.</inlineHelpText>
        <label>Referrer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>To capture failed leads due to assignment issues and report for reprocessing</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Spend__c</fullName>
        <label>Estimated Annual Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exact_Target_Campaign_Date__c</fullName>
        <label>Exact Target Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exact_Target_Campaign__c</fullName>
        <label>Exact Target Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Customer_ID__c</fullName>
        <label>Existing Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Customer</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>